// Copyright 2022 Lekko Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package lekko.backend.v1beta1;

import "google/protobuf/any.proto";

// Initial implementation of a feature flagging service.
service ConfigurationService {
  rpc GetBoolValue(GetBoolValueRequest) returns (GetBoolValueResponse) {}
  rpc GetProtoValue(GetProtoValueRequest) returns (GetProtoValueResponse) {}
  rpc GetJSONValue(GetJSONValueRequest) returns (GetJSONValueResponse) {}
}

message GetBoolValueRequest {
  string key = 1;
  map<string, Value> context = 2;
  string namespace = 3;
}

message GetBoolValueResponse {
  bool value = 1;
}

message GetProtoValueRequest {
  string key = 1;
  map<string, Value> context = 2;
  string namespace = 3;
}

message GetProtoValueResponse {
  google.protobuf.Any value = 1;
}

message GetJSONValueRequest {
  string key = 1;
  map<string, Value> context = 2;
  string namespace = 3;
}

message GetJSONValueResponse {
  bytes value = 1;
}

message Value {
  oneof kind {
    bool bool_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    string string_value = 4;
  }
}
